<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">智学网查分助手</string>
    <string name="app_developed_by" translatable="false">Developed by JingBh</string>
    <string name="app_icon_designed_by" translatable="false">Icon designed by zhc7</string>
    <string name="switch_account">切换账号</string>
    <string name="refresh">刷新</string>
    <string name="help">帮助</string>
    <string name="about">关于</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="ignore">忽略</string>
    <string name="okay">好的</string>
    <string name="login">登录</string>
    <string name="back">返回</string>
    <string name="others">其它</string>
    <string name="loading">加载中…</string>
    <string name="next">继续</string>
    <string name="save">保存</string>
    <string name="view">查看</string>
    <string name="view_source">查看源码</string>
    <string name="download">下载</string>
    <string name="filter">筛选</string>
    <string name="agreements_title">用户须知与免责声明</string>
    <string name="agreements_agree">我已阅读并同意以上内容</string>
    <string name="under_construction" translatable="false">Under Construction</string>
    <string name="under_construction_help">此功能还未完成。</string>
    <string name="data_empty">暂无数据</string>
    <string name="build_unstable">此版本是测试版</string>
    <string name="build_unstable_help">测试版可能不稳定、功能不全，且存在一定问题。</string>
    <string name="build_debug">诶？这个图标背景怎么是黑的</string>
    <string name="build_debug_help" translatable="false">This is a debug build, which is for development use only. Normally, you should use a release build. Are you a developer? Consider contributing to this project.</string>
    <string name="update_check">检查更新</string>
    <string name="update_service">更新服务</string>
    <string name="update_found_title">检查到新版本</string>
    <string name="update_failed_title">检查更新失败</string>
    <string name="update_failed">请检查是否可以访问 GitHub。</string>
    <string name="update_no_assets">未找到新版本安装包，可能是由于安装包还未完成构建，请稍后重试。</string>
    <string name="update_latest">已经是最新版本</string>
    <string name="login_loading">正在加载用户信息…</string>
    <string name="login_failed">登录失败</string>
    <string name="login_failed_null">密钥为空。</string>
    <string name="login_failed_format">密钥格式错误。请检查输入的密钥是否正确。</string>
    <string name="login_failed_expired">密钥已过期。请重新在网页端登录。</string>
    <string name="login_failed_expired_imported">密钥已过期。智学网 app 会自动刷新密钥，请打开智学网 app，然后回来重试一次。</string>
    <string name="login_failed_help">无法获取用户信息，请检查密钥是否有效。</string>
    <string name="login_help">我们需要获取到你的智学网账号的访问密钥，才能帮你查分。</string>
    <string name="login_choose_method">选择登录方式</string>
    <string name="login_switch_method">切换登录方式</string>
    <string name="method_manual">手动输入密钥</string>
    <string name="method_manual_help">如果你正好有一个能用的密钥（格式为 JWT），可以在此输入；否则请选择其它方式。</string>
    <string name="method_webview">通过网页端登录</string>
    <string name="method_webview_help">点击这里在网页端登录后，我们就可以在浏览器中读取你的密钥。</string>
    <string name="method_webview_role">仅支持学生账号</string>
    <string name="method_webview_role_help">本 app 只支持使用学生账号登录，请勿使用教师账号或家长账号。</string>
    <string name="method_import">从 智学网 app 导入</string>
    <string name="method_import_student">从 智学网学生端 导入</string>
    <string name="method_import_parent">从 智学网家长端 导入</string>
    <string name="method_import_help">若已在智学网 app 中登录账号，我们可以尝试从中读取你的密钥。</string>
    <string name="input_token">输入密钥…</string>
    <string name="input_token_empty">未输入密钥</string>
    <string name="import_check_permissions">检查权限</string>
    <string name="import_check_permissions_help">我们需要有足够的权限才能从智学网 app 中读取密钥。</string>
    <string name="import_need_permissions">请授予权限</string>
    <string name="import_request_permissions">请求权限</string>
    <string name="import_request_permissions_help">为了能够从智学网 app 中读取密钥，请授予读取外部存储的权限。</string>
    <string name="import_fail">导入密钥失败</string>
    <string name="import_fail_not_found">未找到用户信息文件的位置，无法导入。请检查你是否已登录智学网 app。</string>
    <string name="import_fail_system">系统拒绝了我们的访问。</string>
    <string name="import_fail_json">解析用户信息文件失败。</string>
    <string name="import_assistance">我们需要一点帮助</string>
    <string name="import_assistance_help">从 Android 11 开始，系统不再允许我们访问其他应用的文件了。好在我们有个备用方案：请在新打开的窗口选择“user”文件并使用智学网查分助手打开。</string>
    <string name="exam_type_weekly">统练</string>
    <string name="exam_type_monthly">月考</string>
    <string name="exam_type_midterm">期中</string>
    <string name="exam_type_terminal">期末</string>
    <string name="exam_list">考试列表</string>
    <string name="exam_list_loading">正在加载考试列表…</string>
    <string name="exam_details">考试详情</string>
    <string name="exam_details_no_paper">暂无试卷信息</string>
    <string name="paper_original">原卷</string>
    <string name="paper_score">分数</string>
    <string name="paper_assigned_score">赋分</string>
    <string name="paper_analysis">试卷详情</string>
    <string name="paper_analysis_action">查看试卷详情</string>
    <string name="paper_topic_title">第 %s 题</string>
    <string name="paper_topic_title_sub">第 %s 题 第 %s 小问</string>
    <string name="paper_topic_answer_mine">我的答案</string>
    <string name="paper_topic_answer_standard">标准答案</string>
    <string name="paper_topic_answer_not_selected">未选择</string>
    <string name="paper_topic_answer_not_filled">未填写</string>
    <string name="paper_topic_score">得分</string>
    <string name="subject_list">科目列表</string>
    <string name="subject_all">全科</string>
    <string name="subject_chinese">语文</string>
    <string name="subject_mathematics">数学</string>
    <string name="subject_english">英语</string>
    <string name="subject_physics">物理</string>
    <string name="subject_chemistry">化学</string>
    <string name="subject_politics">政治</string>
    <string name="subject_history">历史</string>
    <string name="subject_geography">地理</string>
    <string name="subject_biology">生物</string>
    <string name="subject_art">美术</string>
    <string name="subject_music">音乐</string>
    <string name="subject_information_technology">信息技术</string>
    <string name="subject_general_technology">通用技术</string>
    <string name="subject_physical_education">体育</string>
</resources>
