<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_round_filter_alt_24"
        android:title="@string/filter"
        app:showAsAction="ifRoom">

        <menu>
            <group android:checkableBehavior="all">

                <item
                    android:id="@+id/filter_weekly"
                    android:title="@string/exam_type_weekly" />

                <item
                    android:id="@+id/filter_monthly"
                    android:title="@string/exam_type_monthly" />

                <item
                    android:id="@+id/filter_midterm"
                    android:title="@string/exam_type_midterm" />

                <item
                    android:id="@+id/filter_terminal"
                    android:title="@string/exam_type_terminal" />

                <item
                    android:id="@+id/filter_others"
                    android:title="@string/others" />

            </group>
        </menu>

    </item>

    <item
        android:id="@+id/switch_account"
        android:title="@string/switch_account"
        app:showAsAction="never" />

    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>
